src/test/deca/codegen/valid/expr/test_soustraction_int.deca
// Description:
//    tests de la soustraction d'entiers
//
// Resultats:
//
// Historique:
// cree le 12/01/2024
{
    int i = 1;
    int j;
    j = i - 1;
}

