src/test/deca/codegen/invalid/stack_overflow.deca
// // Description:
// //    Test de dépassement de pile, à lancer avec la commande ima -p 3 stack_overflo.deca
// //
// // Resultats:
// //    
// //
// // Historique:
// //    cree le 15/01/2024
{
    int a = 1;
    int b = 2;
    int c = 3;
    int d = 4;
    int e = 5;
    int f = 6;
    int g = 7;
}